--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,10 +4,10 @@
 }
 h1 {
     font-weight: 900;
-    font-size: 24px;
+    font-size: 35px;
     text-align: center;
     text-decoration: underline;
-    padding-bottom: 20px;
+    margin: 50px;
 }
 li {
     display: flex;
